# LCA

./: .gitignore  Cargo.toml  README.md  mcp-config.json
.github/workflows/: ci.yml  release.yml
examples/: demo.sh
src/: main.rs  permissions.rs
src/agents/: analysis.rs  base.rs  code.rs  coordinator.rs  file.rs  mcp_agent.rs  mod.rs  shell.rs
src/context/: manager.rs
src/llm/: client.rs  mod.rs  types.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server.rs
src/orchestrator/: mod.rs  system.rs
src/tools/: executor.rs  mod.rs
tests/: test_lmstudio.sh
