[package]
name = "lca"
version = "0.1.0"
edition = "2021"
authors = ["ZephrFish"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for LLM APIs
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async utilities
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process execution
tokio-process = "0.2"

# File system operations
walkdir = "2.4"
ignore = "0.4"

# Context and memory
sled = "0.34"

# Interactive line editing with history
rustyline = "14.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
